# zep-nlp-server

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml  load_test.py  main.py  nlp.http  pyproject.toml
.github/workflows/: docker-build-publish.yml  lint.yml  test.yml
app/: api.py  config.py  embedder.py  embedding_models.py  entity_extractor.py  entity_models.py  models.py  spacy_extractor.py
app/data/: example_request.json
app/tests/: test_api.py
